backend/envoy-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: envoy-backend
spec:
  selector:
    app: envoy-backend
  ports:
    - protocol: TCP
      port: 80   # Change to 80
      targetPort: 10000
  type: LoadBalancer
