backend/envoy-config-backend.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: envoy-config-backend
data:
  envoy.yaml: |
    static_resources:
      listeners:
        - name: backend_listener
          address:
            socket_address:
              address: 0.0.0.0
              port_value: 10000
          filter_chains:
            - filters:
                - name: envoy.filters.network.http_connection_manager
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                    stat_prefix: backend
                    codec_type: AUTO
                    route_config:
                      virtual_hosts:
                        - name: backend
                          domains: ["*"]
                          routes:
                            - match: { prefix: "/" }
                              route:
                                cluster: backend_service
                    http_filters:
                      - name: envoy.filters.http.lua
                        typed_config:
                          "@type": type.googleapis.com/envoy.extensions.filters.http.lua.v3.Lua
                          inline_code: |
                            function envoy_on_request(request_handle)
                              local headers = request_handle:headers()
                              headers:replace("Authorization", "[REDACTED]")
                              headers:replace("password", "[REDACTED]")
                            end
                      - name: envoy.filters.http.router
    clusters:
      - name: backend_service
        connect_timeout: 5s
        type: LOGICAL_DNS
        load_assignment:
          cluster_name: backend_service
          endpoints:
            - lb_endpoints:
                - endpoint:
                    address:
                      socket_address:
                        address: backend-service
                        port_value: 5000
